// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/segmented/demo/basic.vue correctly 1`] = `
<div class="ant-segmented ">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Daily">Daily</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/block.vue correctly 1`] = `
<div class="ant-segmented  ant-segmented-block">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="123">123</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="456">456</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="longtext-longtext-longtext-longtext">longtext-longtext-longtext-longtext</div>
    </label>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/custom.vue correctly 1`] = `
<br>
<br>
`;

exports[`renders ./components/segmented/demo/disabled.vue correctly 1`] = `
<div>
  <div class="ant-segmented  ant-segmented-disabled">
    <div class="ant-segmented-group">
      <!----><label class="ant-segmented-item-disabled ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio" disabled="">
        <div class="ant-segmented-item-label" title="Map">Map</div>
      </label><label class="ant-segmented-item-disabled ant-segmented-item"><input class="ant-segmented-item-input" type="radio" disabled="">
        <div class="ant-segmented-item-label" title="Transit">Transit</div>
      </label><label class="ant-segmented-item-disabled ant-segmented-item"><input class="ant-segmented-item-input" type="radio" disabled="">
        <div class="ant-segmented-item-label" title="Satellite">Satellite</div>
      </label>
    </div>
  </div><br><br>
  <div class="ant-segmented ">
    <div class="ant-segmented-group">
      <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
        <div class="ant-segmented-item-label" title="Daily">Daily</div>
      </label><label class="ant-segmented-item-disabled ant-segmented-item"><input class="ant-segmented-item-input" type="radio" disabled="">
        <div class="ant-segmented-item-label" title="">
          <!---->
        </div>
      </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
        <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
      </label><label class="ant-segmented-item-disabled ant-segmented-item"><input class="ant-segmented-item-input" type="radio" disabled="">
        <div class="ant-segmented-item-label" title="">
          <!---->
        </div>
      </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
        <div class="ant-segmented-item-label" title="Yearly">Yearly</div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/dynamic.vue correctly 1`] = `
<div class="ant-segmented ">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Daily">Daily</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
    </label>
  </div>
</div>
<br>
<br>
<button class="ant-btn ant-btn-primary" type="button">
  <!----><span>Load More</span>
</button>
`;

exports[`renders ./components/segmented/demo/size.vue correctly 1`] = `
<div class="ant-segmented  ant-segmented-lg">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Daily">Daily</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
<br>
<br>
<div class="ant-segmented ">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Daily">Daily</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
<br>
<br>
<div class="ant-segmented  ant-segmented-sm">
  <div class="ant-segmented-group">
    <!----><label class="ant-segmented-item ant-segmented-item-selected"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Daily">Daily</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="ant-segmented-item"><input class="ant-segmented-item-input" type="radio">
      <div class="ant-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
`;
